fix overflow

--- a/frontend/src/app/profile-page/profile-page/profile-page.component.css
+++ b/frontend/src/app/profile-page/profile-page/profile-page.component.css
@@ -79,6 +79,7 @@
     padding  : 0.5rem;
     font-size: 1rem;
     color    : black;
+    overflow: visible;
   }
   
   .elo-text {
